All tests working (albeit ES 0.90.6)